# log-bin

./: .eslintrc.json  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  app.yaml  dispatch.yaml  package-lock.json  package.json
.github/workflows/: ci.yml
client/: app.jsx  index.html  stream.js  style.css
client/els/: Footer.jsx  Header.jsx  Landing.jsx  LogStream.jsx  Main.jsx
client/public/: bundle.js
server/: server.js
src/: channel_manager.rs  main.rs  models.rs
src/parsers/: color_utils.rs  mod.rs
