[package]
name = "log-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "net",
  "signal",
], default-features = false }
tower-http = { version = "0.6", features = [
  "fs",
  "cors",
  "set-header",
], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = [
  "std",
  "clock",
] }
uuid = { version = "1.0", features = ["v4"], default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", features = [
  "fmt",
  "std",
  "env-filter",
], default-features = false }
futures = { version = "0.3", default-features = false, features = ["executor"] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
async-stream = "0.3"
memorable-ids = "0.1"
sha2 = { version = "0.10", default-features = false }
sfv = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
